--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Albert's Portfolio Site</title>
-    <link rel="stylesheet" href="main/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="icon" href="/Users/alsmacbook/Desktop/Udemy - Complete 2022 Web Dev Bootcamp/CSS - My Site/favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
   
