--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Albert's Portfolio Site</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="/Users/alsmacbook/Desktop/Udemy - Complete 2022 Web Dev Bootcamp/CSS - My Site/favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Dancing Script' rel='stylesheet'>
   
 
@@ -15,11 +15,11 @@
 <body>
 
     <div class="top-Container">
-        <img class="top-cloud" src="/Users/alsmacbook/Desktop/Udemy - Complete 2022 Web Dev Bootcamp/CSS - My Site/images/magglass-in.png" alt="magnifying-img">
+        <img class="top-cloud" src="images/magglass-in.png" alt="magnifying-img">
         <h1>I'm Albert.</h1>
         <h2 class="toph2">i find bugs so users don't.</h2>
-        <img class="bottom-cloud" src="/Users/alsmacbook/Desktop/Udemy - Complete 2022 Web Dev Bootcamp/CSS - My Site/images/magglass.png" alt="magnifying-img">
-        <img class="avatar" src="/Users/alsmacbook/Desktop/Udemy - Complete 2022 Web Dev Bootcamp/CSS - My Site/images/albert-avatar.png" alt="avatar-img">
+        <img class="bottom-cloud" src="images/magglass.png" alt="magnifying-img">
+        <img class="avatar" src="images/albert-avatar.png" alt="avatar-img">
     </div>
 
     <div class="middle-container">
@@ -34,13 +34,13 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="testing-img" src="/Users/alsmacbook/Desktop/Udemy - Complete 2022 Web Dev Bootcamp/CSS - My Site/images/testing-img.png" alt="testing-img">
+            <img class="testing-img" src="images/testing-img.png" alt="testing-img">
             <h3>Manual Testing</h3>
             <p>Manual testing is a software testing process in which test cases are executed manually without using any automated tool. All test cases executed by the tester manually according to the end user's perspective. It ensures whether the application is working, as mentioned in the requirement document or not. Test cases are planned and implemented to complete almost 100 percent of the software application. Test case reports are also generated manually.</p>
           </div>
 
           <div class="skill-row">
-            <img class="calendar-img" src="/Users/alsmacbook/Desktop/Udemy - Complete 2022 Web Dev Bootcamp/CSS - My Site/images/calendar-img.png" alt="calendar-img">
+            <img class="calendar-img" src="images/calendar-img.png" alt="calendar-img">
             <h3>Test Planning</h3>
             <p class="desc1"> test plan for software describes what's going to happen, how long it will take, who is going to do it, what it will be done to, and what we expect to come of it. Think of it as a very detailed way to carry out the testing of a piece of software so we can be sure we have covered all the angles. The overall software testing process also has many other formal procedures, but the plan is where we begin.
 
@@ -49,14 +49,14 @@
         </div>
 
         <div class="skill-row">
-            <img class="api-img" src="/Users/alsmacbook/Desktop/Udemy - Complete 2022 Web Dev Bootcamp/CSS - My Site/images/gears-img.png" alt="gears-img">
+            <img class="api-img" src="images/gears-img.png" alt="gears-img">
             <h3>API Testing</h3>
             <p>API testing is a type of software testing that analyzes an application program interface (API) to verify it fulfills its expected functionality, security, performance and reliability. The tests are performed either directly on the API or as part of integration testing.</p>
           </div>
         </div>
 
         <div class="skill-row">
-            <img class="magnifyingglass-img" src="/Users/alsmacbook/Desktop/Udemy - Complete 2022 Web Dev Bootcamp/CSS - My Site/images/magnifyingglass-img.png" alt="magnifyingglass-img">
+            <img class="magnifyingglass-img" src="images/magnifyingglass-img.png" alt="magnifyingglass-img">
             <h3>Automation Testing</h3>
             <p>Automated testing is a process that validates if software is functioning appropriately and meeting requirements before it is released into production. This software testing method uses scripted sequences that are executed by testing tools.</p>
           </div>
